# paklib

./: CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in
include/: pak-file-table-entry.h  pak-file.h  pak-header.h  pak-util.h
src/: pak-file.cpp
